--- a/Contact me.html
+++ b/Contact me.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h2>My Contact Details</h2>
-    <p>Tel: +44 7423546656</p>
+    <p>Tel: +44 </p>
     <p>E-mail: fani_karagianni@hotmail.com</p>
     <p><a href="https://www.linkedin.com/in/fani-karagianni-617a17127/">LinkedIn</a></p>
     <hr>
